# openfga-demo

./: Cargo.toml
etc/: auth_model.fga  auth_model.json  env.template  envs.sh  open-fga.md  openfga-example.md  relationship_tuples.yaml  relationship_tuples_init.yaml  resource-listing-guide.md  resource-sharing-guide.md  selective-sharing-guide.md
scripts/: README.md  api-test.sh  check-openfga.sh  demo.sh  start-openfga.sh  test-resource-listing.sh
scripts/payloads/: create-resource.json  update-resource.json
src/: auth.rs  context.rs  controller.rs  lib.rs  listener.rs  main.rs  routes.rs
